--- a/project.json
+++ b/project.json
@@ -25,7 +25,7 @@
                 },
                 {
                     "key": "Access-Control-Allow-Headers",
-                    "value": "Origin, X-Requested-With, Content-Type, Accept"
+                    "value": "Origin, X-Requested-With, Content-Type, Accept, Authorization"
                 },
                 {
                     "key": "Access-Control-Allow-Credentials",
