--- a/project.json
+++ b/project.json
@@ -1,7 +1,7 @@
 {
     "builds": [
         {
-            "src": "./index.js",
+            "src": "./",
             "use": "@vercel/node"
         }
     ],
@@ -17,7 +17,7 @@
             "headers": [
                 {
                     "key": "Access-Control-Allow-Origin",
-                    "value": "*"
+                    "value": "https://gscabral.github.io"
                 },
                 {
                     "key": "Access-Control-Allow-Methods",
