--- a/project.json
+++ b/project.json
@@ -17,7 +17,7 @@
             "headers": [
                 {
                     "key": "Access-Control-Allow-Origin",
-                    "value": "https://gscabral.github.io"
+                    "value":  "https://gscabral.github.io/Proyectos-libros/"
                 },
                 {
                     "key": "Access-Control-Allow-Methods",
