--- a/project.json
+++ b/project.json
@@ -1,14 +1,14 @@
 {
     "builds": [
         {
-            "src": "./",
+            "src": "./index.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/api/(.*)",
-            "dest": "/"
+            "dest": "/index.js"
         }
     ],
     "headers": [
@@ -17,7 +17,7 @@
             "headers": [
                 {
                     "key": "Access-Control-Allow-Origin",
-                    "value":  "https://gscabral.github.io/Proyectos-libros/"
+                    "value": "https://gscabral.github.io"
                 },
                 {
                     "key": "Access-Control-Allow-Methods",
